// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Home Page A11y I can see the skip to content link 1`] = `"Pređite na sadržaj"`;

exports[`Canonical Home Page Analytics ATI tracking pixel excluding src 1`] = `
<img
  alt=""
  height="1px"
  style="position:absolute"
  width="1px"
/>
`;

exports[`Canonical Home Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/"`;

exports[`Canonical Home Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "81",
  },
  {
    "p": "serbianlat.page",
  },
  {
    "x1": "[urn:bbc:tipo:topic:c6zr6pp47w7t]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-serbian]",
  },
  {
    "x4": "[sr-latn]",
  },
  {
    "x7": "[index-home]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Početna%20stranica]",
  },
]
`;

exports[`Canonical Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, na srpskom",
  "url": "/serbian/lat",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "Zašto BBC zaslužuje vaše poverenje",
  "url": "https://www.bbc.com/serbian/lat/institutional-50173730",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "Pravila korišćenja",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "O BBC-ju",
  "url": "https://www.bbc.co.uk/aboutthebbc/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "Pravila privatnosti",
  "url": "https://www.bbc.com/privacy/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "Kolačići",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "Kontaktirajte BBC",
  "url": "https://www.bbc.co.uk/serbian/send/u50853665",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News na drugim jezicima",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 9`] = `
{
  "text": "Pročitajte naša pravila o linkovanju drugih sajtova.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/serbian/lat"`;

exports[`Canonical Home Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. BBC nije odgovoran za sadržaj drugih sajtova. Pročitajte naša pravila o linkovanju drugih sajtova."`;

exports[`Canonical Home Page Header I can see the branding 1`] = `"BBC News, na srpskom"`;

exports[`Canonical Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "Otvorena stranica, Početna strana",
  "url": "/serbian/lat",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 2`] = `
{
  "text": "Studentske blokade",
  "url": "/serbian/topics/cly9dd4w09wt/lat",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 3`] = `
{
  "text": "Srbija",
  "url": "/serbian/topics/cr50vdy9q6wt/lat",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 4`] = `
{
  "text": "Balkan",
  "url": "/serbian/topics/c06g87137jgt/lat",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 5`] = `
{
  "text": "Svet",
  "url": "/serbian/topics/c2lej05e1eqt/lat",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 6`] = `
{
  "text": "Video",
  "url": "/serbian/topics/c44vyp5g049t/lat",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 7`] = `
{
  "text": "Najpopularnije",
  "url": "/serbian/lat/popular/read",
}
`;

exports[`Canonical Home Page Main heading should match text 1`] = `"BBC News, na srpskom - Glavna stranica"`;

exports[`Canonical Home Page Most Read has item with rank 1`] = `
{
  "text": "Uhapšeno 56 osoba osumnjičenih za zloupotrebe i korupciju 26",
  "url": "/serbian/lat/media-23169623",
}
`;

exports[`Canonical Home Page Most Read has item with rank 2`] = `
{
  "text": "test, please ignore",
  "url": "/serbian/lat/23200492",
}
`;

exports[`Canonical Home Page Most Read has item with rank 3`] = `
{
  "text": "Uhapšeno 56 osoba osumnjičenih za zloupotrebe i korupciju 6",
  "url": "/serbian/lat/media-23169493",
}
`;

exports[`Canonical Home Page Most Read has item with rank 4`] = `
{
  "text": "Uhapšeno 56 osoba osumnjičenih za zloupotrebe i korupciju 29",
  "url": "/serbian/lat/media-23169626",
}
`;

exports[`Canonical Home Page Most Read has item with rank 5`] = `
{
  "text": "Otvorene ZOI 2014",
  "url": "/serbian/lat/23181035",
}
`;

exports[`Canonical Home Page Most Read has item with rank 6`] = `
{
  "text": "Uhapšeno 56 osoba osumnjičenih za zloupotrebe i korupciju 27",
  "url": "/serbian/lat/media-23169624",
}
`;

exports[`Canonical Home Page Most Read has item with rank 7`] = `
{
  "text": "Uhapšeno 56 osoba osumnjičenih za zloupotrebe i korupciju 8",
  "url": "/serbian/lat/media-23169495",
}
`;

exports[`Canonical Home Page Most Read has item with rank 8`] = `
{
  "text": "Uhapšeno 56 osoba osumnjičenih za zloupotrebe i korupciju 7",
  "url": "/serbian/lat/media-23169494",
}
`;

exports[`Canonical Home Page Most Read has item with rank 9`] = `
{
  "text": "Uhapšeno 56 osoba osumnjičenih za zloupotrebe i korupciju 11",
  "url": "/serbian/lat/media-23169608",
}
`;

exports[`Canonical Home Page Most Read has item with rank 10`] = `
{
  "text": "Beba panda odmara nakon prvog javnog nastupa",
  "url": "/serbian/lat/23180965",
}
`;

exports[`Canonical Home Page Page content First item in the first curation is the correct headline 1`] = `"Međunarodni dan menopauze: Promena kroz koju prolazi svaka žena overtyped2"`;

exports[`Canonical Home Page Page content First item in the first curation is the correct image 1`] = `
<img
  alt="Promena kod svake žene"
  class="bbc-139onq"
  fetchpriority="high"
  loading="eager"
  src="https://ichef.bbci.co.uk/ace/ws/240/cpsdevpb/3d07/test/7ea19630-8d4a-11ef-8e34-ef6bbfe11731.jpg.webp"
  style="aspect-ratio:16 / 9"
/>
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/serbian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Home Page SEO Canonical link 1`] = `"http://localhost:7080/serbian/lat"`;

exports[`Canonical Home Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Home Page SEO Heading level 1 1`] = `"BBC News, na srpskom - Glavna stranica"`;

exports[`Canonical Home Page SEO Lang attribute 1`] = `"sr-latn"`;

exports[`Canonical Home Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "Početna stranica",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/serbian.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "sr-latn",
        "name": "Serbian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/serbian/lat",
        "@type": "WebPage",
        "name": "Početna stranica",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/serbian.png",
          "width": 1024,
        },
        "name": "BBC News na srpskom",
        "publishingPrinciples": "https://www.bbc.com/serbian/lat/institutional-50173730",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/serbian.png",
      "url": "http://localhost:7080/serbian/lat",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/serbian/articles/c45n4pv61vno/lat",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/serbian/articles/c3x8zzpdy8ko/lat",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/serbian/articles/cdkvrw4gplqo/lat",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/serbian/lat/23181025",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.whatsapp.com/channel/0029VaVHa4S6rsQrlMVx8c0b",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/serbian/resources/idt-40c9a7fc-8e5b-4641-93aa-a4e3c66b0f5a",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/news/health-23553049",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/serbian/articles/c63g1zl3envo/lat",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/serbian/articles/c3yn189pzvgo/lat",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/serbian/lat/media-23169612",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/serbian/articles/cx306dyme0jo/lat",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.youtube.com/watch?v=Ld7_XJtdbL4",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.youtube.com/watch?v=ilkRlzO9KAs",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://youtu.be/NtGPCivX8-E",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://youtu.be/KJCwSDh4KnQ",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.youtube.com/",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://bit.ly/3ZeGrsH",
        },
      ],
      "name": "BBC News na srpskom",
      "numberOfItems": 17,
    },
  ],
}
`;

exports[`Canonical Home Page SEO OG description 1`] = `"Srpska početna stranica"`;

exports[`Canonical Home Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/serbian.png"`;

exports[`Canonical Home Page SEO OG image alt 1`] = `"BBC News na srpskom"`;

exports[`Canonical Home Page SEO OG locale 1`] = `"sr-latn"`;

exports[`Canonical Home Page SEO OG site name 1`] = `"BBC News na srpskom"`;

exports[`Canonical Home Page SEO OG title 1`] = `"Glavna stranica - BBC News na srpskom"`;

exports[`Canonical Home Page SEO OG type 1`] = `"website"`;

exports[`Canonical Home Page SEO OG url 1`] = `"http://localhost:7080/serbian/lat"`;

exports[`Canonical Home Page SEO Page title 1`] = `"Glavna stranica - BBC News na srpskom"`;

exports[`Canonical Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Home Page SEO Twitter creator 1`] = `"@bbcnasrpskom"`;

exports[`Canonical Home Page SEO Twitter description 1`] = `"Srpska početna stranica"`;

exports[`Canonical Home Page SEO Twitter image alt 1`] = `"BBC News na srpskom"`;

exports[`Canonical Home Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/serbian.png"`;

exports[`Canonical Home Page SEO Twitter site 1`] = `"@bbcnasrpskom"`;

exports[`Canonical Home Page SEO Twitter title 1`] = `"Glavna stranica - BBC News na srpskom"`;

exports[`Canonical Home Page Timestamp should match text and date 1`] = `
{
  "date": "2024-10-18",
  "text": "18 oktobar 2024",
}
`;

exports[`Canonical Home Page messageBanner has a link 1`] = `"https://www.whatsapp.com/channel/0029VaVHa4S6rsQrlMVx8c0b"`;

exports[`Canonical Home Page messageBanner has an image 1`] = `
<img
  alt=""
  class="bbc-139onq"
  loading="eager"
  sizes="(max-width: 37.4375rem) 184px, 224px"
  src="https://ichef.test.bbci.co.uk/ace/ws/224/cpsdevpb/0409/test/6d7272a0-abfc-11ef-b4f6-4568dfb1f4fc.png.webp"
  srcset="https://ichef.test.bbci.co.uk/ace/ws/184/cpsdevpb/0409/test/6d7272a0-abfc-11ef-b4f6-4568dfb1f4fc.png.webp 184w, 
                          https://ichef.test.bbci.co.uk/ace/ws/368/cpsdevpb/0409/test/6d7272a0-abfc-11ef-b4f6-4568dfb1f4fc.png.webp 368w, 
                          https://ichef.test.bbci.co.uk/ace/ws/224/cpsdevpb/0409/test/6d7272a0-abfc-11ef-b4f6-4568dfb1f4fc.png.webp 224w, 
                          https://ichef.test.bbci.co.uk/ace/ws/448/cpsdevpb/0409/test/6d7272a0-abfc-11ef-b4f6-4568dfb1f4fc.png.webp 448w"
  style="aspect-ratio:16 / 9"
/>
`;
